cli/src/backend/snapshots/diplomat_java__backend__test__enum_and_struct.snap
---
source: cli/src/backend/mod.rs
expression: res
---
package dev.diplomattest.somelib;

import dev.diplomattest.somelib.ntv.*;

import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
import java.lang.ref.Cleaner;
import java.lang.foreign.SegmentAllocator;
import java.util.List;
import static java.lang.foreign.ValueLayout.*;
import java.nio.charset.StandardCharsets;
import java.util.stream.Stream;

public class MyStruct {
    byte a;
    boolean b;
    byte c;
    long d;
    int e;
    int f;
    MyEnum g;
    

    List<Object> selfEdges = List.of();
    

    private MyStruct() {
    }

    MyStruct(MemorySegment structSegment) {
        this.selfEdges = selfEdges;
        

        var aNative = dev.diplomattest.somelib.ntv.MyStruct.a(structSegment);
        var aVal = aNative;
        this.a = aVal;
        var bNative = dev.diplomattest.somelib.ntv.MyStruct.b(structSegment);
        var bVal = bNative;
        this.b = bVal;
        var cNative = dev.diplomattest.somelib.ntv.MyStruct.c(structSegment);
        var cVal = cNative;
        this.c = cVal;
        var dNative = dev.diplomattest.somelib.ntv.MyStruct.d(structSegment);
        var dVal = dNative;
        this.d = dVal;
        var eNative = dev.diplomattest.somelib.ntv.MyStruct.e(structSegment);
        var eVal = eNative;
        this.e = eVal;
        var fNative = dev.diplomattest.somelib.ntv.MyStruct.f(structSegment);
        var fVal = fNative;
        this.f = fVal;
        var gNative = dev.diplomattest.somelib.ntv.MyStruct.g(structSegment);
        var gVal = MyEnum.fromInt(gNative);
        this.g = gVal;
        

    }

    MemorySegment toNative(SegmentAllocator arena) {
        var returnVal = dev.diplomattest.somelib.ntv.MyStruct.allocate(arena);
        
        var aNative = a;
        dev.diplomattest.somelib.ntv.MyStruct.a(returnVal, aNative);
        var bNative = b;
        dev.diplomattest.somelib.ntv.MyStruct.b(returnVal, bNative);
        var cNative = c;
        dev.diplomattest.somelib.ntv.MyStruct.c(returnVal, cNative);
        var dNative = d;
        dev.diplomattest.somelib.ntv.MyStruct.d(returnVal, dNative);
        var eNative = e;
        dev.diplomattest.somelib.ntv.MyStruct.e(returnVal, eNative);
        var fNative = f;
        dev.diplomattest.somelib.ntv.MyStruct.f(returnVal, fNative);
        var gNative = g.toInt();
        dev.diplomattest.somelib.ntv.MyStruct.g(returnVal, gNative);
        

        return returnVal;

    }
    
    public static MyStruct new_() {
        
        try (var arena = Arena.ofConfined()) {
            
            var nativeVal = somelib_h.MyStruct_new(arena);
            
            var returnVal = new MyStruct(nativeVal);
            return returnVal;
                    
        }
    }
    
}


============================
package dev.diplomattest.somelib;

import dev.diplomattest.somelib.ntv.somelib_h;


import java.lang.foreign.Arena;
import java.lang.foreign.MemorySegment;
import java.lang.ref.Cleaner;
import java.lang.foreign.SegmentAllocator;
import static java.lang.foreign.ValueLayout.*;
import java.nio.charset.StandardCharsets;

public enum MyEnum {
    A,
    B,
    C,
    D,
    E,
    F,
    ;

    static MyEnum fromInt(int i) {
        switch (i) {
            case -2 -> {
                return MyEnum.A;
            }
            case -1 -> {
                return MyEnum.B;
            }
            case 0 -> {
                return MyEnum.C;
            }
            case 1 -> {
                return MyEnum.D;
            }
            case 2 -> {
                return MyEnum.E;
            }
            case 3 -> {
                return MyEnum.F;
            }
            
        }
        throw new RuntimeException("Unexpected int for MyEnum:" + i);
    }

    int toInt() {
        switch (this) {
            case A -> {
                return -2;
            }
            case B -> {
                return -1;
            }
            case C -> {
                return 0;
            }
            case D -> {
                return 1;
            }
            case E -> {
                return 2;
            }
            case F -> {
                return 3;
            }
            
        }
        throw new RuntimeException("Unexpected variant for MyEnum:" + this);
    }

    
    public static MyEnum getA() {
        
        var nativeVal = somelib_h.MyEnum_get_a();
        
        var returnVal = MyEnum.fromInt(nativeVal);
        return returnVal;
                
    }
    
}

============================
